# AEGIS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
alpha_foundry/: CMakeLists.txt
forge/: CMakeLists.txt
forge/include/forge/: forge.h
forge/python_bindings/: forge_py.cpp
forge/src/: forge.cpp
hedge_smith/: CMakeLists.txt
orca/: CMakeLists.txt
python/aegis/: __init__.py
python/tests/: conftest.py  test_import.py
